opensource/nexus/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nexus-service
spec:
  selector:
    app: nexus
  ports:
  - protocol: TCP
    name: nexus-port
    port: 8082
    targetPort: 8081
  - protocol: TCP
    name: nexus-docker-hosted-port
    port: 8083
    targetPort: 8083
  type: LoadBalancer
